lau-165: Fixing game object hierarchy overflow.

--- a/src/editor/development/app/styles/main.scss
+++ b/src/editor/development/app/styles/main.scss
@@ -109,6 +109,10 @@ body {
   width: 5em;
 }
 
+#hierarchy-container {
+  overflow-y: scroll;
+}
+
 body {
   overflow: hidden;
 }
